# q2-samtools

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
q2_samtools/: __init__.py  _format.py  _samtools.py  _transformer.py  _type.py  plugin_setup.py
q2_samtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
